customer-order-service/tracking-service/tracking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-deployment
  labels:
    app: tracking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking
  template:
    metadata:
      labels:
        app: tracking
    spec:
      containers:
      - name: tracking
        image: viren1990/tracking-service:latest
        ports:
        - containerPort: 9002
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9002
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 9002
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
