customer-order-service/tracking-service/tracking-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tracking-service
  name: tracking-service
spec:
  type: ClusterIP
  ports:
  - name: http-tracking
    port: 80
    protocol: TCP
    targetPort: 9002
  selector:
    app: tracking
