customer-order-service/tracking-service/tracking-destinationRules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tracking-destination-rule
spec:
  host: tracking-service
