customer-order-service/tracking-service/tracking-virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: tracking-virtual-service
  labels:
    virtualservice: tracking-virtual-service
spec:
  http:
    - route:
        - destination:
            host: tracking-service
      retries:
        attempts: 1
        perTryTimeout: 2s
        retryOn: connect-failure,refused-stream,503,500,502
      timeout: 5s
  hosts:
    - tracking-service
